solc_ossfuzz_seed_corpus/test_sol/test_3ae45f1674672856250a2a65b930d2458e7d2c34417f7e5e881ab56773c190ce_9081e92e7955fb5023c7d8feb4422ad1dadc0ea4_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  modifier m0(address i0,function () external   returns (string memory, bool, function (function (bool, bytes24, int24) internal   returns (bool, bool, uint16), address) external   returns (address)) i1) 
  {
    _;
  }
  function f0(address payable i0,function () external   returns (string memory) i1) public   
  {
    (string memory l0) = i1();
    (string memory l1) = i1();
  }
  function f1(bytes7 i0) external    returns(uint216 o0)
  {
  }
  function f2() public    returns(address payable o0,uint88 o1)
  {
    assembly
    {
    }
    if (true)
    {
    }
    else if ((((uint96(0) ** uint32((uint32(1353333308) << uint80(uint80(1208925819614629174706175))))) % uint96(79228162514264337593543950335)) < uint96(40070226116971003848361178408)))
    {
    }
  }
  function f3() public   
  {
  }
  function f4(uint152 i0) public   
  {
    f3();
  }
  function f5(function (int248, bool, bool) internal   i0,int32 i1) external    returns(address payable o0,bool o1,function (function (int32) external   returns (function (function (int8, function (bool) external  , uint248) external   returns (bytes5), bool, bytes27) internal   returns (bytes[2] memory, bytes8[2] memory), bool, address payable)[] memory) internal   o2)
  {
    (address payable l0, uint88 l1) = f2();
  }
  event ev0(uint104  ep0, function () external    ep1, bytes indexed ep2);
  function f6() external    returns(function (bytes16, address payable, address) internal   o0,bytes2 o1,bytes2 o2)
  {
  }
}
pragma solidity >= 0.0.0;
using L0 for uint;
// ----
// TypeError 2582: (su0.sol:101-173): Internal type cannot be used for external function type.
